--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,27 @@
-.fa-caret-down:before {
-    content: none;
-}
+/* .lil-container {
+    width: auto;
+    height: auto;
+    background-color: black;
+} */
 
-.modal-btn {
-    background-color: green;
-    color: white;
-    border-radius: 0.375rem;
-    border-color: transparent;
-}
-
-.nav-bar-container {
-    justify-content: space-between;
-    width: 14%;
-}
-
-.log-out {
+.dropdown-logout {
     color: red;
+}
+
+.navbar-buttons {
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+}
+
+.post-button {
+    color: white;
+    background-color: #198754;
+    border: none;
+    border-radius: 5px;
+}
+
+.img-thumbnail {
+    object-fit: cover;
+    aspect-ratio: 1;
 }
